Solução do exercício passo-a-passo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <img src="evolucao-do-cinema.png" alt="" style="width: 457px">-
 
 
-  <p></p>
+
+  <p> <a href="história.html">Para saber mais clique aqui!! 📽 </a> </p>
   
 </body>
 </html>
